# pyside6_by_example

./: README.md  pyproject.toml
book/: README.md
site/: mkdocs.yml
site/docs/: anatomy_of_basic_application.md  basic_app_take_2.md  csv_browser.md  intro.md
src/net/priimak/pyside6/examples/basic_1/: main.py  main_window.py
src/net/priimak/pyside6/examples/csv_browser/: app_context.py  main.py  main_window.py  settings_dialog.py
src/net/priimak/pyside6/tools/: __init__.py  app_persist.py  app_state.py  panel_widget.py  recenetly_opened_files.py
src/net/priimak/pyside6/tools/templates/: __init__.py  qmain_window_base_a.py
src/pyside6_by_example/examples/basic_1/: main.py  main_window.py
src/pyside6_by_example/examples/basic_2/: main.py  main_window.py
src/pyside6_by_example/examples/basic_2/menus/: file_menu.py  help_menu.py  menu_bar.py
src/pyside6_by_example/examples/basic_2/panels/: __init__.py  bottom_panel.py  main_panel.py  root_panel.py  top_panel.py
src/pyside6_by_example/examples/csv_browser/: __init__.py  app_context.py  main.py  main_window.py  settings_dialog.py
src/pyside6_by_example/examples/csv_browser/csv_ui/: csv_data_frame.py  csv_table_view.py
src/pyside6_by_example/examples/csv_browser/menus/: file_menu.py  menu_bar.py
src/pyside6_by_example/examples/csv_browser/panels/: bottom_panel.py  main_panel.py  top_panel.py
src/pyside6_by_example/tools/: __init__.py  app_persist.py  app_state.py  recenetly_opened_files.py
src/pyside6_by_example/tools/templates/: __init__.py  qmain_window_base_a.py
(+7 files in other folders)
