[project]
name = "pyside6-by-example"
version = "0.1.0"
description = "PySide6 Examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6==6.8.0.2",
    "polars==1.14.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.png"]

[project.scripts]
csv_browser = "pyside6_by_example.examples.csv_browser.main:main"
pyside6_example_1 = "pyside6_by_example.examples.basic_1.main:main"